added books library page with sorting

--- a/styles.css
+++ b/styles.css
@@ -447,3 +447,33 @@ footer {
     margin-bottom: 24px;
   }
 }
+
+.fa-spinner {
+  animation: rotate 600ms infinte linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.books__loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 60px;
+  font-size: 60px;
+  color: #7342d6;
+}
+
+.books__loading--spinner {
+  display: none !important;
+}
+
+.books__loading .books__loading--spinner {
+  display: block !important;
+}
